<resources>
    <string name="app_name">蓝牙TPMS</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">您的设备不支持BLE</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No Connection</string>
    <string name="title_devices">查找BLE设备</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="device_number">接收设备数：</string>
    <string name="device_list">接收列表</string>
    <string name="send">Send</string>
    <string name="get_devices">查看设备</string>
    <string name="positive_button">确定</string>
    <!-- Menu items -->
    <string name="menu_reflesh">刷新</string>
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开</string>
    <string name="menu_set">设置</string>
    <string name="menu_add">添加</string>
    <string name="menu_sacan">扫一扫</string>

    <string name="menu_change">详情</string>
    <string name="menu_close">解绑/绑定</string>
    <string name="menu_luntai">轮胎转位</string>

    <string name="findpwd">找回密码</string>
    <string name="registerpwd">设置密码</string>
    <string name="register">注册</string>

    <string name="preesure">胎压</string>
    <string name="temp">温度</string>
    <string name="low_preesure">低压</string>
    <string name="pressure_unit">bar</string>
    <string name="temp_unit">℃</string>
    <string name="adjust">点击更换位置</string>
    <string name="adjustTo">调换位置</string>
    <string name="ok">确定</string>
    <string name="next">跳过</string>
    <string name="voltage">电压</string>
    <string name="distancs">信号</string>
    <string name="voltage_unit">V</string>
    <string name="distancs_unit">db</string>
    <string name="retry">重试</string>
    <string name="change">点击更换</string>
    <string name="unbund">点击解绑</string>
    <string name="unbund_success">点击绑定</string>

    <string name="erroinfo">蓝牙还未连接上，退出等待蓝牙连接上之后再进入</string>
    <string name="erronofind">未扫描到蓝牙设备，请退出后再重试</string>
    <string name="photoPickerNotFoundText">找不到图片资源</string>
    <string name="photoPickerNotFoundText1">找不到图片等资源</string>

    <string name="step0">开始扫描 《左前轮位置处》传感器，请将手机贴近 《左前轮》轮胎气嘴\n</string>
    <string name="step1">正在扫描。。。</string>
    <string name="step2">正在连接。。。</string>
    <string name="step3">正在配置。。。</string>
    <string name="step4">正在复位传感器。。。</string>
    <string name="step5">配置完成！</string>
    <string name="no_network_connection_toast">网络没有连接</string>
    <string-array name="staticText">
        <item>开始扫描 《左前轮位置处》传感器，请将手机贴近 《左前轮》轮胎气嘴\n</item>
        <item>开始扫描 《右前轮位置处》传感器，请将手机贴近 《右前轮》轮胎气嘴\n</item>
        <item>开始扫描 《右后轮位置处》传感器，请将手机贴近 《右后轮》轮胎气嘴\n</item>
        <item>开始扫描 《左后轮位置处》传感器，请将手机贴近 《左后轮》轮胎气嘴\n</item>
    </string-array>
    <string-array name="pressure">
        <item>Bar</item>
        <item>Kpa</item>
        <item>Psi</item>
    </string-array>
    <string-array name="land">
        <item>竖屏</item>
        <item>横屏</item>
    </string-array>
    <string-array name="temp">
        <item>℃</item>
        <item>F</item>
    </string-array>

    <string name="defaulttemp">--</string>
    <string name="defaultdate"></string>
    <string name="defaulttime">--</string>
    <string name="codeVersion">版本1.0.0</string>
    <!--
        true : show rssi;
        false : no show rssi
    -->
    <bool name="isShowRssi">false</bool>
    <string name="privateStr">1.   特别声明\n
        \t\t1.1   本协议是您与广东小安智能科技股份有限公司（以下简称“小安”）间关于您下载、安装、使用本软件及服务所订立的协议，协议的各条款内容和解释权以及服务的所有权归小安所有。
        \n\t\t1.2   请务必认真阅读和理解本《小安安装许可服务协议》（以下简称“《协议》”）各条款内容，特别是免除或限制责任的条款，除非您已阅读并接受本《协议》条款，否则您无权下载、安装或使用小安各软件及相关服务，您一旦下载、安装、访问本软件产品，或通过注册、登陆使用本软件产品，将视为对本《协议》的接受，即表示您同意接受本《协议》各项条款的约束，如果您不同意本《协议》中的条款，请不要下载、安装或使用小安各软件及相关服务。
        \n2.   使用规则\n
        \t\t2.1   小安不能保证小安的产品与每一个用户的车型完全兼容，用户在首次使用 产品前，应详细参阅产品介绍，并严格按照使用说明进行操作，如果出现任何异 常问题，请立即停止使用本产品，并第一时间联系售后客服处理问题。
        \n\t\t2.2   用户在申请使用小安软件服务时，必须向小安提供准确的个人资料，如个 人资料有任何变动，必须及时更新，以保证其真实性、准确性、最新性和完整性。 小安不对因用户操作失当而造成的身份匹配问题、信息匹配问题及引起的任何损 失或损害承担责任。
        \n\t\t2.3   用户注册成功后，小安将给予每个用户一个用户帐号及相应的密码，该用 户帐号和密码由用户负责保管，用户应当对以其用户帐号进行的所有活动和事件 负法律责任。
        \n\t\t2.4   用户在使用小安服务过程中，必须遵循以下原则：
        \n\t\t\t\t a. 遵守中国有关的法律和法规；
        \n\t\t\t\t b. 不得为任何非法目的而使用小安服务系统；
        \n\t\t\t\t c. 遵守所有与小安服务有关的网络协议、规定和程序；
        \n\t\t\t\t d. 不得利用小安服务系统进行任何可能对互联网的正常运转造成不利影响的行为；
        \n\t\t\t\t e. 不得利用小安服务系统传输任何骚扰性的、中伤他人的、辱骂性的、恐吓性的、庸俗淫秽的或其它任何非法的信息资料；
        \n\t\t\t\t f. 不得利用小安服务系统进行任何不利于小安的行为；
        \n\t\t\t\t g. 如发现任何非法使用用户帐号或帐号出现安全漏洞的情况，应立即通告小安。
        \n\t\t2.5   如用户在使用小安服务时违反任何上述规定，小安或其授权人有权要求用户改正或直接采取一切必要的措施（包括但不限于暂停或终止用户使用小安服务的权利）以减轻用户不当行为造成的影响。
        \n\t\t2.6   用户在使用小安服务的过程中可能需要下载软件，对于这些软件，小安给予   用户一项个人的、可授权的非排他性的许可。用户可为以访问或使用小安服务为目的而使用本软件的其它用户提供授权。
        \n\t\t2.7   用户在驾驶过程中应注意行车安全，注视运行小安服务应用程序的智能手机屏幕或其它可显示设备，可能导致交通事故，用户应当在确保安全驾驶的前提下再操作小安服务应用程序。
        \n\t\t2.8   为了改善用户体验、保证服务的安全性及产品功能的一致性，小安可能会对软件进行更新。用户应该将相关软件更新到最新版本，保证其能正常使用。
        \n3.   内容所有权\n
        \t\t3.1小安对所有开发或合作开发的服务的知识产权拥有所有权或使用权，这些服务受到适用的知识产权、版权、商标、服务商标、专利或其他法律的保护。
        \n\t\t3.2小安提供的服务内容可能包括：文字、软件、声音、图片、视频、图表等。所有这些内容受版权、商标和其它财产所有权法律的保护。用户只有在获得小安或其他相关权利人的授权之后才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。
        \n\t\t3.3对于用户选择并张贴在任何小安服务中可公开获取区域的内容，用户同意小安在全世界范围内具有免费的、永远的、不可撤销的、非独家的和完全再许可的权利和许可，以使用、复制、修改、改编、出版、翻译、据以创作衍生作品，传播、表演和展示此等内容（整体或部分），或将此等内容编入其他任何形式的作品、媒体、或技术中，不论是当前已知的或以后开发的。
        \n4.隐私保护\n
        \t\t4.1保护用户隐私是小安的一项基本政策，小安保证不对外公开或向第三方提供用户注册资料及用户在使用小安服务时存储在小安的非公开内容，但下列情况除外：
        \n\t\t\t\ta. 事先获得用户的明确授权；
        \n\t\t\t\tb.根据有关的法律法规要求；
        \n\t\t\t\tc.按照相关政府主管部门的要求；
        \n\t\t\t\td.为维护社会公众的利益；
        \n\t\t\t\te.为维护小安的合法权益。
        \n\t\t4.2我们提供的胎压监测服务，需要您提供车辆品牌、车型、车牌号、行车电脑记录（例如发动机转速和车速等）、通讯记录（包括通讯类型及通讯次数）方可使用。您在驾驶时，我们可能会收集上述信息，并将此类信息同您的私人信息整合，但我们不收集与您通讯的名字、电话号码及通讯内容。
        \n\t\t4.3小安可能会与第三方合作向用户提供相关的服务，在此情况下，如该第三方同意承担与小安同等的保护用户隐私的责任，则小安可将用户的注册资料等提供给该第三方。
        \n\t\t4.4在不透露单个用户隐私资料的前提下，小安有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。
        \n5.免责声明\n
        \t\t5.1用户明确同意其使用小安服务所存在的风险将完全由其自己承担；因其使用小安服务而产生的一切后果（包括但不限于与他人共用账号而导致的个人资料泄露、驾驶时注视小安服务应用程序而导致的交通意外等）也由其自己承担，小安对用户不承担任何责任。
        \n\t\t5.2小安不担保服务一定能满足用户的要求，也不担保服务不会中断，对小安服务的及时性、安全性、准确性也都不作担保。
        \n\t\t5.3小安不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由小安实际控制的任何网页上的内容，小安不承担任何责任。
        \n\t\t5.4任何由于黑客政击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营之不可抗力而造成的小安服务中断、个人资料泄露、丢失、被盗用或被篡改等，小安不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。
        \n\n6.服务变更、中断或终止\n
        \t\t6.1如因系统维护或升级的需要而需暂停小安服务，小安将尽可能事先进行通告。
        \n\t\t6.2如发生下列任何一种情形，小安有权随时中断或终止向用户提供本协议项下的服务而无需通知用户：
        \n\t\t\t\ta. 用户提供的个人资料不真实；
        \n\t\t\t\tb. 用户违反本协议中规定的使用规则。
        \n\t\t6.3除前款所述情形外，小安同时保留在不事先通知用户的情况下随时中断或终止部分或全部服务的权利，对于所有服务的中断或终止而造成的任何损失，小安无需对用户或任何第三方承担任何责任。
        \n\t\t6.4小安对于那些经过延长期限仍未重新使用的暂停帐户保留取消的权利，并可随时自主决定，发出或无须通知，而改变此等通常惯例和限制。
        \n7.违约赔偿\n
        \t\t7.1用户同意保障和维护小安及其用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给小安或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。
        \n\n8.协议修改\n
        \t\t8.1小安将有权随时修改本协议的有关条款，一旦本协议的内容发生变动，小安将会通过适当方式向用户提示修改内容。
        \n\t\t8.2如果不同意小安对本协议相关条款所做的修改，用户有权停止使用小安服务。如果用户继续使用小安服务，则视为用户接受小安对本协议相关条款所做的修改。
        \n9.法律管辖\n
        \t\t9.1本协议的订立、执行和解释及争议的解决均应适用中国法律。
        \n\t\t9.2如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向小安所在地的人民法院提起诉讼。
        \n\n10.通知和送达\n
        \t\t10.1本协议项下所有的通知均可通过重要页面公告、电子邮件或常规的信件传送等方式进行；该等通知于发送之日视为已送达收件人。
        \n11.其他规定\n
        \t\t11.1本协议构成双方对本协议之约定事项及其它有关事宜的完整协议，除本协议规定的之外，未赋予本协议各方其它权利。
        \n\t\t11.2如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。
        \n\t\t11.3本协议中的标题仅为方便而设，在解释本协议时应被忽略。 </string>
</resources>
